public class DesertMap implements Map {
    @Override
    public void load() {
        System.out.println("Loading desert map...");
    }
}
