public class DesertSound implements Sound {
    @Override
    public void play() {
        System.out.println("Playing desert background music...");
    }
}
