public interface Map {
    void load();
}
