public class SnowMap implements Map {
    @Override
    public void load() {
        System.out.println("Loading snow map...");
    }
}
