public class SnowSound implements Sound {
    @Override
    public void play() {
        System.out.println("Playing snow scene background music...");
    }
}
