public class SnowyWeather implements Weather {
    @Override
    public void apply() {
        System.out.println("Applying snowy weather effect...");
    }
}
