public interface Sound {
    void play();
}
