public class SunnyWeather implements Weather {
    @Override
    public void apply() {
        System.out.println("Applying sunny weather effect...");
    }
}
