public interface Weather {
    void apply();
}
